lumen-server/lumen-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumen-server
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: lumen-server
  template:
    metadata:
      labels:
        app: lumen-server
    spec:
      containers:
      - image: ghcr.io/l-u-m-e-n/lumen-server-docker-seafile-client:master
        name: lumen-server
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 250m
            memory: 1500Mi
          limits:
            cpu: 2000m
            memory: 4000Mi
      imagePullSecrets:
      - name: github
