lumen-server/lumen-server-v6-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumen-server-v6
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: lumen-server-v6
  template:
    metadata:
      labels:
        app: lumen-server-v6
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/lumen-server:main
        name: lumen-server-v6
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 250Mi
          limits:
            cpu: 2000m
            memory: 1000Mi
      imagePullSecrets:
      - name: github
