lumen-server/lumen-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lumen-server
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lumen-server-v6
