lumen-server/lumen-server-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lumen-server-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`lumen.elanis.eu`)
    kind: Rule
    services:
    - name: lumen-server
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: lumen-server-tls-secret
